--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,19 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <h3>Mars News</h3>
-        <p>{{ mars.marsnews }}</p>
+        <p>{{ mars.newsTitle }}</p>
+        <p>{{ mars.newsText }}</p>
+        <h3>Mars Weather</h3>
+        <p>{{ mars.marsWeather }}</p>
+        <h3>Mars Hemisperes</h3>
+        <p> Cerberus</p>
+        <a> href=({{ mars.Cerberus }})</a>
+        <img alt="Cerberus" src={{ mars.Cerberus }}>
+        <a>{{ mars.Schiaparelli}}</a>
+        <a>{{ mars.Syrtis}}</a>
+        <a>{{ mars.Valles}}</a>
+        <h3>Mars News</h3>
+        <p>{{ mars.newsTitle }}</p>
       </div>
     </div>
   </div>
